# dvrescue

./: .travis.yml
.github/workflows/: dvrescue-gui.yml
DeckLinkSDK/Examples/Mac/: Binaries.dmg
Project/CMake/: CMakeLists.txt
Project/GNU/: PKGBUILD  dvrescue.dsc  dvrescue.spec
Project/GNU/CLI/: Makefile.am  configure.ac
Project/GNU/CLI/test/: captions.txt  helpers.sh  test1.sh  test1.txt
Project/GNU/GUI/: AddThisToRoot_GUI_compile.sh
Project/MSVC2017/CLI/: DVRescue.vcxproj  DVRescue.vcxproj.filters
Project/MSVC2019/CLI/: DVRescue.vcxproj  DVRescue.vcxproj.filters
Project/Mac/: mkdmg.sh
Project/OBS/: deb10.dsc
Project/OBS/deb10.debian/: changelog  control  dvrescue-gui.install  rules
Project/OBS/deb11.debian/: rules
Source/CLI/: CLI_Help.cpp  CommandLine_Parser.cpp
Source/Common/: AvfCtl.m  AvfCtlWrapper.h  AvfCtlWrapper.mm  Config.h  Core.cpp  Core.h  DecklinkWrapper.cpp  DecklinkWrapper.h  LinuxWrapper.cpp  Merge.cpp  Merge.h  Output.cpp  Output.h  Output_Captions_Decode.cpp  Output_Captions_Scc.cpp  Output_Mkv.cpp  Output_Webvtt.cpp  Output_Webvtt.h  Output_Xml.cpp  Output_Xml.h  ProcessFile.cpp  ProcessFile.h  ProcessFileWrapper.cpp  ProcessFileWrapper.h  SimulatorWrapper.cpp  SimulatorWrapper.h  XmlOutput.cpp
Source/GUI/dvrescue/: dvrescue.pro  ffmpeg.pri  prepare
Source/GUI/dvrescue/dvrescue/: NavButton.qml  PlotPicker.qml  SelectPathDialog.qml  SimpleTransfer.ui.qml  SpecifyPathDialog.qml  (+10 more)
Source/Install/: cygwin.nsh  dvrescue.nsi  qt.nsh
debian/: control  dvrescue-gui.dirs  rules
tools/avfctl/: avfctl.h  avfctl.m  main.m
